--- a/COVID-19.ipynb
+++ b/COVID-19.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "logit = model.coef_[0] * x + model.intercept_\n",
+    "logit = model.coef_[0] * np.arange(len(stats)) + model.intercept_\n",
     "\n",
     "plt.plot(np.log(stats), label='stats')\n",
     "plt.plot(logit, label='trend');\n",
